# perception_pcl

./: .gitignore  .gitmodules
pcl_ros/: CMakeLists.txt  package.xml
pcl_ros/include/pcl_ros/: nodelet_lazy.h  pcl_nodelet.hpp  point_cloud.hpp  visibility_control.h
pcl_ros/include/pcl_ros/features/: feature.hpp
pcl_ros/include/pcl_ros/filters/: PeceptionPipeline.hpp  filter.hpp  passthrough.hpp
pcl_ros/include/pcl_ros/io/: bag_io.hpp  concatenate_data.hpp  concatenate_fields.hpp  pcd_io.hpp
pcl_ros/launch/: demo.launch.py
pcl_ros/src/pcl_ros/filters/: PerceptionPipeline.cpp  filter.cpp  passthrough.cpp
pcl_ros/src/pcl_ros/io/: bag_io.cpp  concatenate_fields.cpp  io.cpp  pcd_io.cpp
pcl_utils/: CMakeLists.txt  package.xml
pcl_utils/include/pcl_utils/: NormalsGenerator.h  NormalsVisualizer.h
pcl_utils/launch/: demo.launch.py
pcl_utils/src/pcl_utils/: NormalsGenerator.cpp  NormalsVisualizer.cpp
